# transformerLM

./: README.md
egs/mylm/s0/: inference.py  train.sh
egs/mylm/s0/conf/: transformer.yaml
egs/mylm/s0/data/dict/: lang_char.txt
net/: checkpoint.py  export_jit.py  inference.py  model.py  train.py  transfomerlm.py
net/dataset/: dataset.py
runtime/torchcpp/ppl/: CMakeLists.txt
runtime/torchcpp/ppl/src/: lm_ppl.cpp  lm_ppl.h  torch_lm_inference.cpp  torch_lm_inference.h  torch_lm_model.cpp  torch_lm_model.h
